--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,14 @@
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="default" />
 <!--  -->
-<meta name="title" content="___" />
+<meta name="title" content="Poke Store" />
 <meta name="description" content="---" />
 <meta name="keywords" content="React,Sass,TypeScript" />
 <!--  -->
 <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png" />
 <link rel="apple-touch-icon" type="image/png" href="%PUBLIC_URL%/favicon.png" />
 <!--  -->
-<title>___</title>
+<title>Poke Store</title>
 </head>
 
 <body>
