created pages: [home, cart, favorites, error]. added: colors.css. Created: header component. Successfully linked all the pages in App.jsx

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,8 @@
 <!--  -->
 <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png" />
 <link rel="apple-touch-icon" type="image/png" href="%PUBLIC_URL%/favicon.png" />
-<!--  -->
+<!-- REMIX ICON CDN -->
+<link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 <title>Poke Store</title>
 </head>
 
