updated style on checkout page

--- a/public/index.html
+++ b/public/index.html
@@ -10,15 +10,13 @@
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="default" />
 <!--  -->
-<meta name="title" content="Poke Store" />
+<meta name="title" content="Poké Store" />
 <meta name="description" content="---" />
 <meta name="keywords" content="React,Sass,TypeScript" />
 <!--  -->
 <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png" />
 <link rel="apple-touch-icon" type="image/png" href="%PUBLIC_URL%/favicon.png" />
-<!-- REMIX ICON CDN -->
-<link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
-<title>Poke Store</title>
+<title>Poké Store | Got To Catch'em All</title>
 </head>
 
 <body>
