updated README file

--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="default" />
 <!--  -->
-<meta name="title" content="Poké Store" />
-<meta name="description" content="---" />
-<meta name="keywords" content="React,Sass,TypeScript" />
+<meta name="title" content="Poké Store | Got To Catch'em All" />
+<meta name="description" content="A Checkout app for the pokemon you love & desire. I Choose You!" />
+<meta name="keywords" content="React, JavaScript, Sass, Styled Components, React Router" />
 <!--  -->
 <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png" />
 <link rel="apple-touch-icon" type="image/png" href="%PUBLIC_URL%/favicon.png" />
